--- a/src/view/LoginForm.fxml
+++ b/src/view/LoginForm.fxml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controller.LoginFormController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane fx:id="loginContext" prefHeight="400.0" prefWidth="480.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginFormController">
+   <children>
+      <ImageView fitHeight="100.0" fitWidth="100.0" layoutX="190.0" layoutY="100.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../assest/icons8-male-user-100.png" />
+         </image>
+      </ImageView>
+      <JFXTextField fx:id="txtUserName" layoutX="25.0" layoutY="240.0" prefHeight="31.0" prefWidth="298.0" promptText="User Name" style="-fx-border-color: black;" />
+      <JFXButton layoutX="359.0" layoutY="240.0" onAction="#btnLoginOnAction" prefHeight="33.0" prefWidth="76.0" style="-fx-border-color: black;" text="Login" />
+   </children>
 </AnchorPane>
