--- a/src/view/LoginForm.fxml
+++ b/src/view/LoginForm.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 
 <AnchorPane fx:id="loginContext" prefHeight="400.0" prefWidth="480.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginFormController">
@@ -14,7 +15,11 @@
             <Image url="@../assest/icons8-male-user-100.png" />
          </image>
       </ImageView>
-      <JFXTextField fx:id="txtUserName" layoutX="25.0" layoutY="240.0" prefHeight="31.0" prefWidth="298.0" promptText="User Name" style="-fx-border-color: black;" />
-      <JFXButton layoutX="359.0" layoutY="240.0" onAction="#btnLoginOnAction" prefHeight="33.0" prefWidth="76.0" style="-fx-border-color: black;" text="Login" />
+      <JFXTextField fx:id="txtUserName" layoutX="25.0" layoutY="240.0" prefHeight="33.0" prefWidth="298.0" promptText="User Name" style="-fx-border-color: black; -fx-background-color: #ecf0f1;" />
+      <JFXButton layoutX="359.0" layoutY="240.0" onAction="#btnLoginOnAction" prefHeight="33.0" prefWidth="76.0" style="-fx-border-color: black; -fx-background-color: #2ecc71;" text="Login">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </JFXButton>
    </children>
 </AnchorPane>
