--- a/src/view/ChatRoomForm.fxml
+++ b/src/view/ChatRoomForm.fxml
@@ -3,9 +3,9 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextArea?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane fx:id="chatRoomContext" prefHeight="714.0" prefWidth="600.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ChatRoomFormController">
    <children>
@@ -16,5 +16,10 @@
             <Font name="System Bold" size="20.0" />
          </font>
       </JFXButton>
+      <Label fx:id="lblUser" layoutX="222.0" layoutY="7.0" prefHeight="39.0" prefWidth="157.0" text="Label" textFill="#00f046">
+         <font>
+            <Font name="System Bold" size="30.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
